--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/manukd/TCHAI-Emmanuel-D-Simon-G#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.9",
     "request": "^2.88.2"
-  }
+  },
+  "devDependencies": {}
 }
