--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "description": "Projet final de Système d'information avancé\r <h3>\r  Auteurs :\r </h3>\r <p> DEREPAS Emmanuel  : Emmanuel_Derepas@etu.u-bourgogne.fr <br/>\r     GAUTHERON Simon  : sgautheron21@gmail.com<br/>\r </p>",
   "main": "src/index.js",
   "scripts": {
+    "dev": "nuxt",
+    "runV1": "concurrently \"node src/TchaiV1/index.js\" \"cd UI/ && npm run dev\"",
+    "runV2": "concurrently \"node src/TchaiV2/index.js\" \"cd UI/ && npm run dev\"",
+    "runV3": "concurrently \"node src/TchaiV3/index.js\" \"cd UI/ && npm run dev\"",
+    "runV4": "concurrently \"node src/TchaiV4/index.js\" \"cd UI/ && npm run dev\"",
+    "attaqueV1": "node test/attaqueTchaiv1.js",
+    "attaqueV2": "node test/attaqueTchaiv2.js",
+    "attaqueV3": "node test/attaqueTchaiv3.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +26,7 @@
   "homepage": "https://github.com/manukd/TCHAI-Emmanuel-D-Simon-G#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.9",
